# demo-dvc-possible-push-bug

./: .gitignore  README.md  dvc_list_output_1.txt  dvc_list_output_2.txt  pyproject.toml
.dvc/: config
data/: zen.txt.dvc  zen.zip.dvc
src/some_project/: generate_data.py  remove_data.py
